[package]
name = "tcloud-library"
description = "Common library for all Tiny Cloud plugins"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
repository = "https://github.com/personal-tiny-cloud/tcloud-library"
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = [ "secure-cookies" ] }
actix-multipart = { version = "0.7", features = [ "tempfile" ] }
async-trait = "0.1.81"
thiserror = "1"
tiny-args = { git = "https://github.com/personal-tiny-cloud/tiny-args", tag = "0.0.5" }
toml = "0.8"
serde_json = "1"
